# AMD

./: README.md  app.js  index.html  package-lock.json  package.json  requirements.txt
Backend/: CMakeLists.txt  README.md
Backend/kernels/: prime_kernels.cl
Backend/scripts/: benchmark.sh  install_deps.sh  run_engine.sh
Backend/src/: main.cpp
Backend/src/chains/: cunningham_host.cpp  cunningham_host.h  cunningham_kernel.cl  cunningham_kernel.hip
Backend/src/config/: engine_config.h
Backend/src/gap/: gap_analyzer.cpp  gap_analyzer.h
Backend/src/memory/: dynamic_sieve_manager.cpp  dynamic_sieve_manager.h
Backend/src/primality/: miller_rabin_kernel.cl  miller_rabin_kernel.hip  rocblas_primality.cpp  rocblas_primality.h
Backend/src/sieve/: gpu_sieve_host.cpp  gpu_sieve_host.h  gpu_sieve_kernel.cl  gpu_sieve_kernel.hip
Backend/src/streaming/: result_streamer.cpp  result_streamer.h
Backend/src/utils/: big_int_utils.cpp  big_int_utils.h  opencl_utils.cpp  opencl_utils.h
Backend/tests/: test_primality.cpp  test_sieve.hip
Frontend/: server.js  styles.css
